# SpathaX-agent

./: Cargo.toml  README.md  README.zh-TW.md
config/: monitor.yaml
src/: lib.rs  main.rs
src/features/: mod.rs
src/features/filesystem/: collector.rs  mod.rs  models.rs
src/features/network/: collector.rs  mod.rs  models.rs
src/features/process/: collector.rs  mod.rs  models.rs
src/features/registry/: collector.rs  mod.rs  models.rs
src/features/service/: collector.rs  mod.rs  models.rs
src/features/system_metrics/: collector.rs  mod.rs  models.rs
src/shared/: error.rs  mod.rs  traits.rs
src/shared/collector/: mod.rs
src/shared/storage/: elasticsearch_storage.rs  mod.rs
