[package]
name = "lsedr"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.33.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
elasticsearch = { version = "8.17.0-alpha.1" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
regex = "1.9.5"
which = "4.4.0"
encoding_rs = "0.8.32"
url = "2.4.1"
notify = "6.1.1"
sha2 = "0.10.8"
whoami = "1.4.1"
serde_yaml = "0.9"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
windows = { version = "0.48", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }
